el boton es ahora naranja  y se sincroniza git y github por Diana version 2

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div class="container">
       <p>Hola Mundo, este es un cambio sincronizado con git y GitHub por Diana version 2 </p>
       <div class="actions">
-        <button>Este es un botón rosado y la letra negra</button>
+        <button>Este es un botón naranja y la letra negra</button>
       </div>
     </div>
   </body>
